--- a/CoverAll_API.csproj
+++ b/CoverAll_API.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="5.0.9"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
   </ItemGroup>
 
 </Project>
